# computer-graphics-lab

./: README.md
P1/: CMakeLists.txt  main.cpp
P1/ejercicio/: Shader.h  main.cpp
P1/practica/: Shader.h  main.cpp
P2/ejercicio/: Shader.h  main.cpp
P2/ejercicio/Shaders/: core.vs
P2/practica/: CMakeLists.txt  main.cpp
P3/ejercicio/: CMakeLists.txt  main.cpp
P3/practica/: main.cpp
P4/ejercicio/: CMakeLists.txt  Main_P4.cpp
P4/ejercicio/Shader/: core.vs
P4/practica/: Main_P4.cpp
P5/: pokebola.mb  table.mb
P5/ejercicio/: CMakeLists.txt  Camera.h  Main_P5.cpp  Texturizado.cpp
P5/ejercicio/Models/Pokeball/: poke_arriba.mtl
P5/ejercicio/SOIL2/: SOIL2.h
P5/ejercicio/Shaders/: lighting.frag  modelLoading.frag
P5/ejercicio/ShadersText/: lamp.frag  lamp.vs
P5/practica/: CMakeLists.txt  Main_P5.cpp
P5/practica/Models/Table/: table.mtl
P6/ejercicio/: CMakeLists.txt  Mesh.h  Shader.h  iluminacion2.cpp
P6/ejercicio/Models/Box/: box.mtl
P6/ejercicio/Models/Esfera/: Esfera.mb  Esfera.mtl
P6/ejercicio/Models/Foco/: foco.mtl
P6/ejercicio/Shaders/: lamp.vs  lighting.frag
P6/practica/: Model.h  iluminacion2.cpp
P6/practica/Models/Couch/: Couch.mtl  couch.mb
P6/practica/Models/Piso/: Piso.mtl
P6/practica/Shaders/: lamp.frag  lighting.frag
